 
 + = Additions since previous version
 ! = Bug fixes since previous version
 ~ = Changes   since previous version

1.9 preview 10 (2011-02-??)
 ! Fixed map source: Docelu.pl
 + Bookmarks can be added (saves map position and selected map source) 
 ! Fixed map source: Cykloatlas and relief
 ! Fixed map source: Map+ (Switzerland)

1.9 preview 9 (2011-02-22)
 + New map source: Reit- und Wanderkarte (Abo) - (requires purchased ticket)
 ~ Updated New Zealand Topographic Maps url
 ! OpenStreetMap attribution + MOBAC user aget

1.9 preview 8 (2011-02-16)
 + NaviComputer: Possible to change tile image format (PNG, 4Bit-PNG, JPEG, ...)
 + OpenPisteMap: All three layers (base, contours and landshed are now supported)
 ~ Disabled TwoNav RMAP output format because of legal/license problems  

1.9 preview 7 (2011-02-04)
 + OSM Hiking ticket system implemented (Wanderreitkarte.de)
 ! NoSuchMethodError: mobac.program.ProgramInfo.getUserAgent()Ljava/lang/String;  

1.9 preview 6 (2011-02-04)
 ! Custom tile size was not available for TrekBuddy and Glopus GFM
 ~ Tile usage policy implemented for OSM Mapnik

1.9 preview 5 (2011-01-21)
 + New map source: ICAO Maps (Germany)
 + Manual map pack online update via settings dialog
 + Add selection via Ctrl+A key combination possible (see "Maps" menu)    

1.9 preview 4 (2011-01-14)
 + New: Support for CustomWmsMapSource (experimental)
 + Download bandwidth limitation selectable for very fast network connections
 ! Highest zoom level missing in tile store coverage zoom selector
 + New atlas format: OsmdroidSQlite  
 + New map sources: ArcGIS topo map/satellite/street map   

1.9 preview 3 (2011-01-09)
 + New atlas format: PNG + Worldfile (PNG & PGW)
 ~ Atlas output format has to be chosen before adding maps
 ~ Disabling of unsupported tile processing options (regarding the current
    atlas format)
 ~ Enabled maps with ellipsoid projection for RMaps 

1.9 preview 2 (2010-12-18)
 + New atlas format: BackCountry Navigator